# neucodec

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
neucodec/: __init__.py  bs_roformer5.py  codec_encoder_distill.py  distill_layers.py  model.py  module.py
neucodec/tconv/: base.py  t_first.py
onnx/: export_onnx.py  onnx_ops.py
tests/: test_models.py  test_neucodec.py
